Closed Bug 1743667 Opened 2 years ago Closed 2 years ago

[WebGPU] GPUDevice.features is undefined

Categories

(Core :: Graphics: WebGPU, defect)

Firefox 94
defect

Tracking

()

RESOLVED FIXED
97 Branch
Tracking Status
firefox97 --- fixed

People

(Reporter: jstpierre, Assigned: kvark)

References

Details

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:94.0) Gecko/20100101 Firefox/94.0

Steps to reproduce:

With a WebGPU-enabled browser, enter:

(await navigator.gpu.requestAdapter()).requestDevice().features

Actual results:

undefined

Expected results:

The supported feature set.

The Bugbug bot thinks this bug should belong to the 'Core::Graphics: WebGPU' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → Graphics: WebGPU
Product: Firefox → Core
Blocks: 1710678
Assignee: nobody → dmalyshau
Attachment #9254414 - Attachment description: Bug 1743667 - Hook up WebGPU device limits and features r=jimb → Bug 1743667 - Hook up WebGPU device limits and features
Attachment #9254414 - Attachment description: Bug 1743667 - Hook up WebGPU device limits and features → Bug 1743667 - Hook up WebGPU device limits and features r=jimb
Pushed by dmalyshau@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/78f599401a07
Hook up WebGPU device limits and features r=jgilbert,webidl,smaug
Status: UNCONFIRMED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 97 Branch
Pushed by dmalyshau@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/305bfa67ca48
Fix GPUSupportedFeatures on WebGPU device r=jimb
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: