Bug 1743667 - Hook up WebGPU device limits and features r=jgilbert,webidl,smaug

Differential Revision: https://phabricator.services.mozilla.com/D133280