dom/webgpu/Device.h
@@ -44,6 +44,7 @@ template <typename T>
 class Sequence;
 class GPUBufferOrGPUTexture;
 enum class GPUErrorFilter : uint8_t;
+enum class GPUFeatureName : uint8_t;
 class GPULogCallback;
 }  // namespace dom
 namespace ipc {
@@ -52,6 +53,9 @@ class Shmem;
 }  // namespace ipc
 
 namespace webgpu {
+namespace ffi {
+struct WGPULimits;
+}
 class Adapter;
 class BindGroup;
 class BindGroupLayout;
@@ -66,6 +70,8 @@ class RenderBundleEncoder;
 class RenderPipeline;
 class Sampler;
 class ShaderModule;
+class SupportedFeatures;
+class SupportedLimits;
 class Texture;
 class WebGPUChild;
 
@@ -79,7 +85,9 @@ class Device final : public DOMEventTargetHelper {
 
   const RawId mId;
 
-  explicit Device(Adapter* const aParent, RawId aId);
+  explicit Device(Adapter* const aParent, RawId aId,
+                  const dom::Sequence<dom::GPUFeatureName>& aRequiredFeatures,
+                  UniquePtr<ffi::WGPULimits> aRawLimits);
 
   RefPtr<WebGPUChild> GetBridge();
   static JSObject* CreateExternalArrayBuffer(JSContext* aCx, size_t aOffset,
@@ -105,12 +113,16 @@ class Device final : public DOMEventTargetHelper {
   nsString mLabel;
   RefPtr<Queue> mQueue;
   nsTHashSet<nsCString> mKnownWarnings;
+  RefPtr<SupportedFeatures> mFeatures;
+  RefPtr<SupportedLimits> mLimits;
 
  public:
   void GetLabel(nsAString& aValue) const;
   void SetLabel(const nsAString& aLabel);
 
-  const RefPtr<Queue>& GetQueue() const;
+  const RefPtr<SupportedFeatures>& Features() const { return mFeatures; }
+  const RefPtr<SupportedLimits>& Limits() const { return mLimits; }
+  const RefPtr<Queue>& GetQueue() const { return mQueue; }
 
   already_AddRefed<Buffer> CreateBuffer(const dom::GPUBufferDescriptor& aDesc,
                                         ErrorResult& aRv);
