dom/webidl/WebGPU.webidl
@@ -87,22 +87,25 @@ dictionary GPURequestAdapterOptions {
 
 [Pref="dom.webgpu.enabled",
  Exposed=Window]
-interface GPUAdapterFeatures {
-    readonly setlike<GPUFeatureName>;
+interface GPUSupportedFeatures {
+    readonly setlike<DOMString>;
 };
 
 dictionary GPUDeviceDescriptor {
     sequence<GPUFeatureName> requiredFeatures = [];
-    record<DOMString, GPUSize32> requiredLimits;
+    record<DOMString, GPUSize64> requiredLimits;
 };
 
 enum GPUFeatureName {
-    "depth-clamping",
+    "depth-clip-control",
     "depth24unorm-stencil8",
     "depth32float-stencil8",
     "pipeline-statistics-query",
     "texture-compression-bc",
+    "texture-compression-etc2",
+    "texture-compression-astc",
     "timestamp-query",
+    "indirect-first-instance",
 };
 
 [Pref="dom.webgpu.enabled",
@@ -131,7 +134,7 @@ interface GPUSupportedLimits {
  Exposed=Window]
 interface GPUAdapter {
     readonly attribute DOMString name;
-    [SameObject] readonly attribute GPUAdapterFeatures features;
+    [SameObject] readonly attribute GPUSupportedFeatures features;
     [SameObject] readonly attribute GPUSupportedLimits limits;
     readonly attribute boolean isFallbackAdapter;
 
@@ -143,9 +146,8 @@ interface GPUAdapter {
 [Pref="dom.webgpu.enabled",
  Exposed=Window]
 interface GPUDevice: EventTarget {
-    //[SameObject] readonly attribute GPUAdapter adapter;
-    //readonly attribute FrozenArray<GPUFeatureName> features;
-    //readonly attribute object limits;
+    [SameObject] readonly attribute GPUSupportedFeatures features;
+    [SameObject] readonly attribute GPUSupportedLimits limits;
 
     // Overriding the name to avoid collision with `class Queue` in gcc
     [SameObject, BinaryName="getQueue"] readonly attribute GPUQueue queue;
